added EP results

--- a/templates/index.html
+++ b/templates/index.html
@@ -134,6 +134,7 @@
     <option value="LU">LU</option>
     <option value="CG">CG</option>
     <option value="BT">BT</option>
+    <option value="EP">EP</option>
   </select>
 </div>
 
