--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Runtime vs Energy</title>
+    <title>Power Optimised Software Envelope Models</title>
     <script src="https://cdn.plot.ly/plotly-2.27.0.min.js"></script>
     <style>
           /* ===============================
@@ -116,13 +116,47 @@
             background: #e8f0ff;
         }
 
+        /* Container for the options */
+        .options {
+            display: flex;
+            gap: 20px;
+            margin-top: 50px;
+        }
+
+        /* Each circle */
+        .option {
+            width: 50px;
+            height: 50px;
+            border: 2px solid #555;
+            border-radius: 50%;       /* makes it a circle */
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-weight: bold;
+            transition: all 0.2s;
+            user-select: none;
+        }
+
+        /* Highlight selected circle */
+        .option.selected {
+            background-color: #4caf50;
+            border-color: #4caf50;
+            color: white;
+        }
+
+        /* Hover effect */
+        .option:hover {
+            border-color: #2196f3;
+        }
+
 
     </style>
 
 </head>
 <body>
 
-<h2>Runtime vs Energy</h2>
+<h2>Power Optimised Software Envelope Models</h2>
 
 
 <!-- drop down selection of benchmark-->
@@ -150,14 +184,47 @@
 
 
 <!-- COMPUTE -->
-<div class="controls">
+<div class="controls compute-row">
+
+    <!-- Alpha value-->
+
+    <label for="alpha"> α (alpha):</label>
+    <input
+      id="alpha"
+      type="number"
+      step="any"
+      value="0.00000004444444444"
+      style="width:120px"
+    />
+
+
+    <!-- Beta value-->
+
+    <label for="beta">β (beta):</label>
+    <input
+      id="beta"
+      type="number"
+      step="any"
+      value="0.00006363423285"
+      style="width:120px"
+    />
+
     <label for="computeSelect">Compute for:</label>
     <select id="computeSelect">
         <option value="">-- plotted points --</option>
     </select>
 
     <button id="computeBtn" type="button">Compute</button>
+
 </div>
+
+<div class="options">
+  <div class="option" data-value="EDD">EDD</div>
+  <div class="option" data-value="EDS">EDS</div>
+  <div class="option" data-value="EDP">EDP</div>
+</div>
+
+
 
 <div id="main">
 
@@ -282,6 +349,8 @@
         derivedId: "derived-content3"
       }
     ];
+
+    let selectedOption = null;  // store the currently selected circle
    
     
 
@@ -403,8 +472,8 @@
         const tbody = rows.map(row => `
             <tr>
                 <td>${row.label}</td>
-                <td>${row.runtime.toFixed(3)}</td>
-                <td>${row.energy.toFixed(3)}</td>
+                <td>${row.runtime.toFixed(5)}</td>
+                <td>${row.energy.toFixed(5)}</td>
             </tr>
         `).join("");
           
@@ -428,7 +497,7 @@
         const rows = derived.map(row => `
             <tr>
                 <td>${row.name}</td>
-                <td>${fmt(row.Absolute)} ${row.value_unit}</td>
+                <td>${fmt(row.Absolute,row.value_unit)} ${row.value_unit}</td>
                 <td>${Number(row.Relative).toFixed(3)}</td>
             </tr>
         `).join("");
@@ -449,11 +518,201 @@
         `;
     }
 
-    function fmt(v, digits = 3) {
-        return (typeof v === "number" && isFinite(v))
-            ? v.toFixed(digits)
-            : "—";
+    function fmt(v, value_unit, digits = 3) {
+        if (value_unit === "%" ){
+          return v.toFixed(7);
+        }
+
+        else{
+          return (typeof v === "number" && isFinite(v))
+              ? v.toFixed(digits)
+              : "—";
+        }
     }
+
+        // -------------------------------
+    // Compute (remove old intersections)
+    // -------------------------------
+    function runCompute(OptionValue){
+        const label = computeSelect.value;
+        if (!label) return;
+
+        const p = plottedPoints.get(label);
+        if (!p) return;
+
+        const alpha = Number(document.getElementById("alpha").value);
+        if (!isFinite(alpha) || alpha <= 0) {
+          alert("α must be a positive number");
+        return;
+        }
+      
+        const beta = Number(document.getElementById("beta").value);
+        if (!isFinite(beta) || beta <= 0) {
+          alert("β must be a positive number");
+        return;
+        }
+      
+      
+        plotContexts.forEach(ctx => {
+          if (ctx.plotId != "plot3") {
+          fetch("/compute", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({
+              point: p,
+              pmin: ctx.pmin,
+              pmax: ctx.pmax,
+              alpha: alpha,
+              beta: beta,
+              option: OptionValue
+            })
+          })
+          .then(r => r.json())
+          .then(data => {
+            removeComputeTraces(ctx.plotId);
+          
+            // intersections
+            data.intersections.forEach(pt => {
+              Plotly.addTraces(ctx.plotId, {
+                x: [pt.x],
+                y: [pt.y],
+                mode: "markers+text",
+                marker:{
+                  size:9,
+                  symbol:"circle",
+                  color:"black"
+                },
+                text: [pt.label],
+                textposition:labelPositionFromLine(pt.line),
+                textfont:{
+                  size:12,
+                  color:"black"
+                },
+                name:pt.label,
+                meta:{type: "intersection" }
+              });
+            });
+          
+            // curves
+            Plotly.addTraces(ctx.plotId, {
+              x: data.edd_curve_limit.runtime,
+              y: data.edd_curve_limit.energy,
+              mode: "lines",
+              name: "EDD limit constraint",
+              line: { color: "orange", width: 2, dash: "dashdot" },
+              meta: { type: "edd_limit" }
+            });
+          
+            Plotly.addTraces(ctx.plotId, {
+              x: data.edd_curve.runtime,
+              y: data.edd_curve.energy,
+              mode: "lines",
+              name: "EDD optimisation constraint",
+              line: { color: "orange", width: 2},
+              meta: { type: "edd" }
+            });
+          
+          
+          
+            // plot theta to D line
+            Plotly.addTraces(ctx.plotId, {
+                x: data.D_line.runtime,
+                y: data.D_line.energy,
+                mode: "lines",
+                name: "max energy save",
+                line: { color: "black", width: 2, dash: "dashdot"},
+                meta: {type: "D_line"}
+            });
+          
+                    // plot C Curve
+            Plotly.addTraces(ctx.plotId, {
+                x: data.C_line.runtime,
+                y: data.C_line.energy,
+                mode: "lines",
+                name: "Contribution Bound",
+                line: { color: "blue", width: 2},
+                meta: {type: "C_line"}
+            });
+          
+
+            updatePowerLines(ctx.plotId,recomputeXMax(ctx.plotId));
+            updateResultsPanel(ctx.resultsId, data.metrics);
+            updateDerivedMetrics(ctx.derivedId, data.metrics.derived_metrics);
+          });
+          }
+          else {
+            removeComputeTraces(ctx.plotId);
+          
+            // Loop over ALL plotted points
+            plottedPoints.forEach((p, label) => {
+            fetch("/compute", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({
+              point: p,
+              pmin: ctx.pmin,
+              pmax: ctx.pmax,
+              alpha: alpha,
+              beta: beta,
+              option: OptionValue
+            })
+          })
+          .then(r => r.json())
+          .then(data => {
+          
+            // intersections
+            //data.intersections.forEach(pt => {
+            //  if(pt.label !== "A" &&  pt.label !== "E" && pt.label !== "B" ){
+            //  Plotly.addTraces(ctx.plotId, {
+            //    x: [pt.x],
+            //    y: [pt.y],
+            //    mode: "markers+text",
+            //    marker:{
+            //      size:9,
+            //      symbol:"circle",
+            //      color:"black"
+            //    },
+            //    text: [pt.label],
+            //    textposition:labelPositionFromLine(pt.line),
+            //    textfont:{
+            //      size:12,
+            //      color:"black"
+            //    },
+            //    name:pt.label,
+            //    meta:{type: "intersection" }
+            //  });
+            //}
+            //});
+//    
+//    
+          
+            // plot theta to D line
+            Plotly.addTraces(ctx.plotId, {
+                x: data.D_line.runtime,
+                y: data.D_line.energy,
+                mode: "lines",
+                name: "max energy save",
+                line: { color: "black", width: 2, dash: "dashdot"},
+                meta: {type: "D_line"}
+            });
+          
+                    // plot C Curve
+            Plotly.addTraces(ctx.plotId, {
+                x: data.C_line.runtime,
+                y: data.C_line.energy,
+                mode: "lines",
+                name: "Contribution Bound",
+                line: { color: "blue", width: 2},
+                meta: {type: "C_line"}
+            });
+          
+
+            updatePowerLines(ctx.plotId,recomputeXMax(ctx.plotId));
+          });
+        });
+          }
+        });
+        }
 
 
 
@@ -493,171 +752,11 @@
     });
 
 
-    // -------------------------------
-    // Compute (remove old intersections)
-    // -------------------------------
+
     computeBtn.addEventListener("click", () => {
-    const label = computeSelect.value;
-    if (!label) return;
-
-    const p = plottedPoints.get(label);
-    if (!p) return;
-
-    plotContexts.forEach(ctx => {
-      if (ctx.plotId != "plot3") {
-      fetch("/compute", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({
-          point: p,
-          pmin: ctx.pmin,
-          pmax: ctx.pmax
-        })
-      })
-      .then(r => r.json())
-      .then(data => {
-        removeComputeTraces(ctx.plotId);
-
-        // intersections
-        data.intersections.forEach(pt => {
-          Plotly.addTraces(ctx.plotId, {
-            x: [pt.x],
-            y: [pt.y],
-            mode: "markers+text",
-            marker:{
-              size:9,
-              symbol:"circle",
-              color:"black"
-            },
-            text: [pt.label],
-            textposition:labelPositionFromLine(pt.line),
-            textfont:{
-              size:12,
-              color:"black"
-            },
-            name:pt.label,
-            meta:{type: "intersection" }
-          });
-        });
-
-        // curves
-        Plotly.addTraces(ctx.plotId, {
-          x: data.edd_curve_limit.runtime,
-          y: data.edd_curve_limit.energy,
-          mode: "lines",
-          name: "EDD limit constraint",
-          line: { color: "orange", width: 2, dash: "dashdot" },
-          meta: { type: "edd_limit" }
-        });
-
-        Plotly.addTraces(ctx.plotId, {
-          x: data.edd_curve.runtime,
-          y: data.edd_curve.energy,
-          mode: "lines",
-          name: "EDD optimisation constraint",
-          line: { color: "orange", width: 2},
-          meta: { type: "edd" }
-        });
-
-
-
-        // plot theta to D line
-        Plotly.addTraces(ctx.plotId, {
-            x: data.D_line.runtime,
-            y: data.D_line.energy,
-            mode: "lines",
-            name: "max energy save",
-            line: { color: "black", width: 2, dash: "dashdot"},
-            meta: {type: "D_line"}
-        });
-
-                // plot C Curve
-        Plotly.addTraces(ctx.plotId, {
-            x: data.C_line.runtime,
-            y: data.C_line.energy,
-            mode: "lines",
-            name: "Contribution Bound",
-            line: { color: "blue", width: 2},
-            meta: {type: "C_line"}
-        });
-
-        
-        updatePowerLines(ctx.plotId,recomputeXMax(ctx.plotId));
-        updateResultsPanel(ctx.resultsId, data.metrics);
-        updateDerivedMetrics(ctx.derivedId, data.metrics.derived_metrics);
-      });
-      }
-      else {
-        removeComputeTraces(ctx.plotId);
-
-        // Loop over ALL plotted points
-        plottedPoints.forEach((p, label) => {
-        fetch("/compute", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({
-          point: p,
-          pmin: ctx.pmin,
-          pmax: ctx.pmax
-        })
-      })
-      .then(r => r.json())
-      .then(data => {
-
-        // intersections
-        //data.intersections.forEach(pt => {
-        //  if(pt.label !== "A" &&  pt.label !== "E" && pt.label !== "B" ){
-        //  Plotly.addTraces(ctx.plotId, {
-        //    x: [pt.x],
-        //    y: [pt.y],
-        //    mode: "markers+text",
-        //    marker:{
-        //      size:9,
-        //      symbol:"circle",
-        //      color:"black"
-        //    },
-        //    text: [pt.label],
-        //    textposition:labelPositionFromLine(pt.line),
-        //    textfont:{
-        //      size:12,
-        //      color:"black"
-        //    },
-        //    name:pt.label,
-        //    meta:{type: "intersection" }
-        //  });
-        //}
-        //});
-//
-//
-
-        // plot theta to D line
-        Plotly.addTraces(ctx.plotId, {
-            x: data.D_line.runtime,
-            y: data.D_line.energy,
-            mode: "lines",
-            name: "max energy save",
-            line: { color: "black", width: 2, dash: "dashdot"},
-            meta: {type: "D_line"}
-        });
-
-                // plot C Curve
-        Plotly.addTraces(ctx.plotId, {
-            x: data.C_line.runtime,
-            y: data.C_line.energy,
-            mode: "lines",
-            name: "Contribution Bound",
-            line: { color: "blue", width: 2},
-            meta: {type: "C_line"}
-        });
-
-        
-        updatePowerLines(ctx.plotId,recomputeXMax(ctx.plotId));
-      });
+    
+      runCompute(selectedOption);
     });
-      }
-    });
-    });
-
 
     document.querySelectorAll(".tab-btn").forEach(btn => {
         btn.addEventListener("click", () => {
@@ -708,6 +807,9 @@ datasetSelect.addEventListener("change", ()=>loadDataset(datasetSelect.value));
 
 document.addEventListener("DOMContentLoaded", () => {
     resetPointDropdown(allPoints);
+    const defaultOption = options[0];          // choose first circle by default
+    defaultOption.classList.add("selected");   // highlight
+    selectedOption = defaultOption.dataset.value;
 });
 
 function initPlots(){
@@ -775,6 +877,24 @@ function resetAllPlots() {
         Plotly.purge(id);
     });
 }
+
+// Circle click handler
+const options = document.querySelectorAll(".option");
+options.forEach(opt => {
+    opt.addEventListener("click", () => {
+        // Remove highlight from all
+        options.forEach(o => o.classList.remove("selected"));
+        // Highlight clicked
+        opt.classList.add("selected");
+
+        selectedOption = opt.dataset.value;   // store selection
+        console.log("Selected:", selectedOption);
+
+        runCompute(selectedOption);           // trigger compute immediately
+    });
+});
+
+
 
 
 
